- fixed triangle overflow w relative positioning

--- a/src/styles/pagesStyles/indexPage.scss
+++ b/src/styles/pagesStyles/indexPage.scss
@@ -5,7 +5,6 @@
     overflow: hidden;
     position: relative; 
     z-index: 1;
-    position: relative;
 
     
 @media only screen and (max-width: 600px) {
