--- a/src/styles/pagesStyles/workPage.scss
+++ b/src/styles/pagesStyles/workPage.scss
@@ -4,8 +4,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-@media screen and (max-width: 600px) {
+  overflow: hidden;
+  position: relative;
 
 
-}
+  @media screen and (max-width: 600px) {
+
+
+  }
 }
